# Analysis

./: .gitignore  CMakeLists.txt  data.txt
include/: simulation.hh  simulator.hh  statistics.hh  wrappers.hh
lib/MacOS/include/gsl/: gsl_types.h
lib/MacOS/lib/: gsl.lib  gslcblas.lib  gsld.lib  libgsl.25.dylib  libgslcblas.0.dylib
lib/Windows/include/mgl2/: abstract.h  base.h  config.h  data.h  data_cf.h  datac.h  datac_cf.h  define.h  dllexport.h  wnd.h
lib/Windows/lib/: gslcblasd.lib  mgl.lib
models/: 2018d.txt  2018l.txt  2020d.txt  2020l.txt  npd.txt  npl.txt  tayd.txt  tyal.txt
src/: main.cc  simulation.cc  simulator.cc
